--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,51 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
+@import "tailwindcss";
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  font-family: "Fira Code", monospace;
+  color: white;
+  font-size: 12px;
+
+  background-image: url("/BG.png");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.text-shadow {
+  text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.5);
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+#vertical-line,
+#horizontal-line {
+  position: absolute;
+  background-color: #bdbbba;
 }
-button:hover {
-  border-color: #646cff;
+#vertical-line {
+  width: 1px;
+  height: 480px;
+  top: 50%;
+  transform: translateY(-50%);
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+#horizontal-line {
+  width: 480px;
+  height: 1px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+.center-align {
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+}
+
+@media(max-width: 640px) {
+  .text-shadow {
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
   }
-  a:hover {
-    color: #747bff;
+  #vertical-line {
+    height: 85%;
   }
-  button {
-    background-color: #f9f9f9;
+  #horizontal-line {
+    width: 85%;
   }
 }
