--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
   background-image: url("/BG.png");
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
 }
 
 .text-shadow {
@@ -38,7 +39,15 @@ body {
   transform: translateX(-50%) translateY(-50%);
 }
 
-@media(max-width: 640px) {
+.cell:nth-child(n + 6) {
+  padding-bottom: 20px;
+}
+
+.cell:nth-child(n + 9) {
+  padding-bottom: 30px;
+}
+
+@media (max-width: 640px) {
   .text-shadow {
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
   }
@@ -47,5 +56,12 @@ body {
   }
   #horizontal-line {
     width: 85%;
+  }
+  .cell:nth-child(n + 6) {
+    padding-bottom: 2vh;
+  }
+  
+  .cell:nth-child(n + 9) {
+    padding-bottom: 2.5vh;
   }
 }
